Fix: Updated mobile nav menu to prevent horizontal scroll and improve layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,7 @@ header nav {
   display: flex;
   gap: 15px;
 }
+
 .hamburger {
   display: none;
   font-size: 2rem;
@@ -59,21 +60,32 @@ header nav {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    justify-content: flex-start;
     background-color: rgba(51, 51, 51, 0.9);
     color: #fff;
+    border-radius: 13px;
+    width: 100%;
+    height: auto;
     position: absolute;
     top: 80px;
-    right: 0;
-    width: 200px;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
+    left: -110%;
+    align-items: stretch;
     text-align: center;
     padding: 20px 0;
-    border-radius: 10px;
+    margin: 0;
+    transition: all 0.3s ease-in-out;
   }
 
   .nav-links.open {
-    transform: translateX(0);
+    left: 0%;
+  }
+  .nav-links a {
+    display: block;
+    padding: 1rem 0;
+  }
+  .nav-links a:hover {
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(20px);
   }
 
   .hamburger {
